--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: 최수정
 
 # Short bio or description (displayed in the header)
 description: Web Developer from Somewhere
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: chlsujeong12/chlsujeong12.github.io
   instagram:
   linkedin:
   pinterest:
